# misspeller

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: ateji.rs  contraction.rs  keyboards.rs  slur.rs  typos.rs  variants.rs
