[package]
name = "misspeller"
version = "0.0.9"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Take a word and return a list of common spelling mistakes"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/misspeller"
documentation = "https://docs.rs/misspeller/"
keywords = ["natural","language","processing","nlp","dataset"]
